Fix viewport issue and overlapping elements

--- a/code/public/css/ubi.css
+++ b/code/public/css/ubi.css
@@ -13,10 +13,7 @@ body {
 }
 
 #root {
-    height: 100vh;
-    overflow-y: auto;
-    overflow-x: hidden;
-    box-sizing: border-box;
+
     /* padding-top and padding-bottom are set by JS for header/footer */
 }
 
@@ -104,6 +101,10 @@ body {
     height: 40px !important;
     border-radius: 50% !important;
     padding: 0 !important;
+}
+
+#chat-input {
+    height: 50px !important;
 }
 
 html:not(.dark) #chat-submit:disabled {
